--- a/aliapp/README.Rmd
+++ b/aliapp/README.Rmd
@@ -15,11 +15,7 @@ knitr::opts_chunk$set(
 
 # aliapp
 
-<!-- badges: start -->
-[![R-CMD-check](https://github.com/Saqlainrocks7/R_App/workflows/R-CMD-check/badge.svg)](https://github.com/Saqlainrocks7/R_App/actions)
-<!-- badges: end -->
-
-The goal of aliapp is to ...
+The goal of the package 'aliapp' is to visualize and explore the 1973 US Arrests data using an interactive dashboard made by R and Shiny. The dataset used here is an in-built dataset in base R.
 
 ## Installation
 
@@ -30,27 +26,11 @@ You can install the development version of aliapp from [GitHub](https://github.c
 devtools::install_github("Saqlainrocks7/R_App")
 ```
 
-## Example
-
-This is a basic example which shows you how to solve a common problem:
-
-```{r example}
-library(aliapp)
-## basic example code
-```
-
-What is special about using `README.Rmd` instead of just `README.md`? You can include R chunks like so:
+Summary of the Dataset
 
 ```{r cars}
-summary(cars)
+summary(USArrests)
 ```
 
-You'll still need to render `README.Rmd` regularly, to keep `README.md` up-to-date. `devtools::build_readme()` is handy for this. You could also use GitHub Actions to re-render `README.Rmd` every time you push. An example workflow can be found here: <https://github.com/r-lib/actions/tree/v1/examples>.
+Here are some functionalities of the app shown below:
 
-You can also embed plots, for example:
-
-```{r pressure, echo = FALSE}
-plot(pressure)
-```
-
-In that case, don't forget to commit and push the resulting figure files, so they display on GitHub and CRAN.
