--- a/aliapp/README.Rmd
+++ b/aliapp/README.Rmd
@@ -34,3 +34,9 @@ summary(USArrests)
 
 Here are some functionalities of the app shown below:
 
+![](pics/home.png)
+
+![](pics/statewise.png)
+
+![](pics/map.png)
+
